--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
                 <div v-else class="p-5"></div>
                 <div class="p-10 grid grid-cols-7 gap-[3vh]" enter-from-class="translate-x-[150%] opacity-0" id="numbers">
                     <div v-for="number, i in sortedArray" :id="i">
-                        <div :class="[activeNumbers.includes(i) ? activeC : keep.includes(i) ? keepC : switching.includes(i) & switching[0] == i ? switch1C : switching.includes(i) ? switch2C : normalC]">
+                        <div :class="[activeNumbers.includes(i) ? activeC : keep.includes(i) ? keepC : switching.includes(i) & switching[0] == i ? switch1C : switching.includes(i) ? switch2C : editMode ? editC : normalC]">
                             <div v-if="switching[0] == i" class="p-3 size-[16vh] text-center algin-middle content-center text-[5vh]">{{sortedArray[i+1]}}</div>
                             <div v-else-if="switching[1] == i" class="p-3 size-[16vh] text-center algin-middle content-center text-[5vh]">{{sortedArray[i-1]}}</div>
-                            <div v-else class="p-3 size-[16vh] object-scale-down text-center algin-middle content-center text-[5vh]">{{number}}</div>
-                        </div >
+                            <div v-else>
+                                <div v-if="!editMode" class="p-3 size-[16vh] object-scale-down text-center algin-middle content-center text-[5vh]">{{number}}</div>
+                                <div class="size-[16vh] p-3 content-center text-center algin-middle" v-else>
+                                    <input type="number" min="0" max="999" v-model="sortedArray[i]" class="text-center algin-middle [appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none text-[5vh] max-w-[13vh]">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="flex justify-center">
@@ -61,6 +66,7 @@
                 switch1C : 'outline-[0.3vh] outline-yellow-500 hover:bg-yellow-800 bg-yellow-950 outline-offset-2 outline-solid rounded-full hover:shadow-lg hover:shadow-yellow-600 transition-all select-none translate-x-[19vh]',
                 switch2C : 'outline-3 outline-yellow-500 hover:bg-yellow-800 bg-yellow-950 outline-offset-2 outline-solid rounded-full hover:shadow-lg hover:shadow-yellow-600 transition-all select-none -translate-x-[19vh]',
                 normalC : 'outline-[0.2vh] outline-offset-2 outline-solid hover:bg-gray-600 bg-gray-700 rounded-full hover:shadow-lg hover:shadow-gray-400 select-none',
+                editC : 'outline-[0.2vh] outline-fuchsia-600 outline-offset-2 outline-solid hover:bg-fuchsia-900 bg-fuchsia-950 rounded-full hover:shadow-lg hover:shadow-fuchsia-600 select-none',
                 speed : 50,
                 sortedArray : [],
                 activeNumbers : [],
