--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body id="app" class="bg-gray-800 h-screen">
         <div class="flex justify-center p-6 text-white font-mono text-4xl">Bubble Sort Algorithm</div>
-        <div class="flex h-9/10 text-white font-mono">
+        <div class="flex h-8/10 text-white font-mono">
             <div class="m-auto">
                 <div v-if="canceled & complete" class="text-3xl flex justify-center p-2">Sort Canceled</div>
                 <div v-else-if="complete &! canceled" class="text-3xl flex justify-center p-2">Sort Complete</div>
@@ -25,14 +25,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="flex justify-center">
+                <div class="absolute left-0 bottom-0 flex w-screen justify-center">
+                    <div class="absolute bottom-[8vh] flex justify-center p-6 text-lg">
+                        Number of Passes: {{passes}}, Total Actions: {{actions}}
+                    </div>
+                    <div class="absolute left-0 bottom-[13vh] flex w-screen justify-center">
+                        <div class="m-auto select-none px-3">
+                            Sort Speed: {{speed}}<br>
+                            <input v-model="speed" type="range" value="50" min="2" max="98" class="w-full h-6 rounded-lg appearance-none cursor-pointer bg-gray-700 accent-red-100">
+                        </div>
+                    </div>
                     <div class="flex justify-center p-6">
-                        <div v-on:click="genNewArr()" class="rounded-full p-3 outline-2 outline-offset-2, outline-solid, outline-orange-300 hover:outline-orange-200 hover:shadow-lg hover:bg-yellow-950 hover:shadow-orange-500/50 text-2xl transition-all cursor-pointer select-none active:scale-110">
+                        <div v-on:click="genNewArr()" :class="[!running ? 'rounded-full p-3 outline-2 outline-offset-2, outline-solid, outline-orange-300 hover:outline-orange-200 hover:shadow-lg hover:bg-yellow-950 hover:shadow-orange-500/50 text-2xl transition-all cursor-pointer select-none active:scale-110' : 'rounded-full p-3 outline-2 outline-offset-2, outline-solid, outline-gray-300 text-2xl transition-all cursor-not-allowed select-none']">
                             <div class="p-2">Generate Random List</div>
                         </div>
                     </div>
                     <div class="flex justify-center p-6">
-                        <div v-if="!running" v-on:click="sort()" :class="[!editMode ? 'rounded-full p-3 outline-2 outline-offset-2, outline-solid, outline-green-300 hover:outline-green-200 hover:shadow-lg hover:bg-green-900 hover:shadow-green-500/50 text-2xl transition-all cursor-pointer select-none active:scale-110' : 'rounded-full p-3 outline-2 outline-offset-2, outline-solid, outline-gray-300 text-2xl transition-all cursor-not-allowed select-none']">
+                        <div v-if="!running" v-on:click="sort(), proceed = 0" :class="[!editMode ? 'rounded-full p-3 outline-2 outline-offset-2, outline-solid, outline-green-300 hover:outline-green-200 hover:shadow-lg hover:bg-green-900 hover:shadow-green-500/50 text-2xl transition-all cursor-pointer select-none active:scale-110' : 'rounded-full p-3 outline-2 outline-offset-2, outline-solid, outline-gray-300 text-2xl transition-all cursor-not-allowed select-none']">
                             <div class="p-2">Sort List</div>
                         </div>
                         <div v-else v-on:click="canceled = true, cancel()" class="rounded-full p-3 outline-2 outline-offset-2, outline-solid, outline-red-400 hover:outline-red-300 hover:shadow-lg hover:bg-red-950 hover:shadow-red-500/50 text-2xl transition-all cursor-pointer select-none active:scale-110">
@@ -48,25 +57,16 @@
                         </div>
                     </div>
                     <div class="flex justify-center p-6">
-                        <div v-if="editMode" v-on:click="numbersInArray += 1, sortedArray.push(0)" class="rounded-full p-3 outline-2 outline-offset-2, outline-solid, outline-green-300 hover:outline-green-200 hover:shadow-lg hover:bg-green-900 hover:shadow-green-500/50 text-2xl transition-all cursor-pointer select-none active:scale-110">
+                        <div v-if="editMode & numbersInArray < 21" v-on:click="numbersInArray += 1, sortedArray.push(0)" class="rounded-full p-3 outline-2 outline-offset-2, outline-solid, outline-green-300 hover:outline-green-200 hover:shadow-lg hover:bg-green-900 hover:shadow-green-500/50 text-2xl transition-all cursor-pointer select-none active:scale-110">
                             <div class="p-2">+</div>
                         </div>
                     </div>
                     <div class="flex justify-center p-6">
-                        <div v-if="editMode" v-on:click="numbersInArray -= 1, sortedArray.pop(-1)" class="rounded-full p-3 outline-2 outline-offset-2, outline-solid, outline-red-400 hover:outline-red-300 hover:shadow-lg hover:bg-red-950 hover:shadow-red-500/50 text-2xl transition-all cursor-pointer select-none active:scale-110">
+                        <div v-if="editMode & numbersInArray > 0" v-on:click="numbersInArray -= 1, sortedArray.pop(-1)" class="rounded-full p-3 outline-2 outline-offset-2, outline-solid, outline-red-400 hover:outline-red-300 hover:shadow-lg hover:bg-red-950 hover:shadow-red-500/50 text-2xl transition-all cursor-pointer select-none active:scale-110">
                             <div class="p-2">-</div>
                         </div>
                     </div>
                 </div>
-                <div class="flex justify-center p-6 text-lg">
-                    Number of Passes: {{passes}}, Current State: {{state}}
-                </div>
-                <div class="flex">
-                        <div class="m-auto select-none px-3">
-                            Sort Speed: {{speed-2}}<br>
-                            <input v-model="speed" type="range" value="50" min="2" max="102" class="w-full h-6 rounded-lg appearance-none cursor-pointer bg-gray-700 accent-red-100">
-                        </div>
-                    </div>
             </div>
         </div>
     </body>
@@ -96,24 +96,27 @@
                 canceled : false,
                 running : false,
                 editMode : false,
-                numbersInArray : 7
+                numbersInArray : 7,
+                actions : 0
             }
         },
         mounted(){
             this.genNewArr()
-            
         },
         methods: {
             genNewArr(){
-                this.activeNumbers = []
-                this.keep = []
-                this.switching = []
-                this.passes = 0
-                this.i = 0
-                this.sortedArray = []
-                this.complete = false
-                for (let i = 0; i <this.numbersInArray; i++){
-                    this.sortedArray.push(Math.floor(Math.random() * 101))
+                if (!this.running){
+                    this.actions = 0
+                    this.activeNumbers = []
+                    this.keep = []
+                    this.switching = []
+                    this.passes = 0
+                    this.i = 0
+                    this.sortedArray = []
+                    this.complete = false
+                    for (let i = 0; i <this.numbersInArray; i++){
+                        this.sortedArray.push(Math.floor(Math.random() * 101))
+                    }
                 }
             },
             async sort(){
@@ -135,6 +138,7 @@
                                 this.switching.push(this.i+1)
                                 this.state = "switch"
                                 this.checkChange = true
+                                this.actions += 1
                             } else{
                                 this.keep.push(this.i)
                                 this.keep.push(this.i+1)
@@ -154,6 +158,7 @@
                             this.activeNumbers.push(this.i+0)
                             this.activeNumbers.push(this.i+1)
                             this.state = "check"
+                            this.actions += 1
                         }else{
                             this.i = 0
                             this.passes += 1
@@ -166,17 +171,20 @@
                 }
             },
             finish(){
+                this.activeNumbers = [0, 1]
+                this.switching = []
+                this.keep = []
                 if (!this.checkChange){
                     this.complete = true
                     this.state = "idle"
                     this.running = false
+                    this.activeNumbers = []
+                    this.actions =  0
                 }
-                    
                 this.checkChange = false
-                this.keep = []
             },
             sleep(msec){
-                return new Promise(resolve => setTimeout(resolve, this.speed*20));
+                return new Promise(resolve => setTimeout(resolve, (100-this.speed)*20));
             },
             cancel(){
             this.state = "idle"
